[package]
name = "btknmle"
version = "0.2.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1.13", features = ["sync", "rt", "macros", "signal"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
bitflags = "1.3"
thiserror = "1.0"
btknmle-input = { path = "input" }
btknmle-keydb = { path = "keydb" }
clap = "3.0.0-beta.5"
log = "0.4"
stderrlog = "0.5"
anyhow = "1.0"
gatt = "0.2"
btmgmt = "0.2"
bdaddr = "0.1"

[workspace]
members = [
    "input",
    "keydb",
]

[profile.release]
codegen-units=1
