[package]
name = "btknmle"
version = "0.2.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1.13", features = ["sync", "rt", "macros", "signal"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
bitflags = "1.3"
thiserror = "1.0"
btknmle-input = { path = "input" }
btknmle-keydb = { path = "keydb" }
clap = { version = "3.0.0-rc.3", features = ["derive", "env"] }
log = "0.4"
simple_logger = { version = "1.15", default-features = false, features = ["colored", "stderr"] }
anyhow = "1.0"
gatt = "0.3.0-alpha.1"
btmgmt = "0.3.0-alpha.4"
bdaddr = { version = "0.2.0-alpha.4", features = ["matches"] }

[workspace]
members = [
    "input",
    "keydb",
]

[profile.release]
codegen-units=1
