[package]
name = "btknmle-input"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
input = "0.4"
udev = "0.2"
tokio = { version="0.2", features=["io-driver"] }
futures = "0.3"
bytes = "0.5"
mio = "0.6"
libc = "0.2"
log = "0.4"

[dev-dependencies]
tokio = { version="0.2", features=["macros", "rt-core", "stream", "time"] }

[build-dependencies]
bindgen = "0.52"
