[package]
name = "btknmle-input"
version = "0.2.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
input = { version="0.5", default-features = false, features=["udev"] }
tokio = { version="0.3", features=["net", "stream"] }
libc = "0.2"
log = "0.4"

[dev-dependencies]
tokio = { version="0.3", features=["macros", "rt", "stream", "time"] }
anyhow = "1.0"

[build-dependencies]
bindgen = { version="0.55", optional=true }
