[package]
name = "btknmle-keydb"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version="0.2", features=["blocking"] }
futures = "0.3"
bytes = "0.5"
thiserror = "1.0"
rusqlite = { version="0.23", features=["bundled"] }
async-trait = "0.1"
btknmle-pkt = { path="../btknmle-pkt" }
btknmle-server = { path="../btknmle-server" }

[dev-dependencies]
tokio = { version="0.2", features=["macros"] }
mktemp-rs = "0.2"
