[package]
name = "btknmle-server"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version="0.2", features=["macros", "sync", "rt-core", "stream", "fs"] }
tokio-util = { version="0.3", features=["codec"] }
futures = "0.3"
bytes = "0.5"
bitflags = "1.2"
thiserror = "1.0"
async-trait = "0.1"
btknmle-sock = { path="../btknmle-sock" }
btknmle-pkt = { path="../btknmle-pkt" }
log = "0.4"
