[package]
name = "btknmle-sock"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.2", features=["io-driver"] }
tokio-util = { version="0.2", features=["codec"] }
futures = "0.3"
mio = "0.6"
bytes = "0.5"
libc = "0.2"

[dev-dependencies]
tokio = { version="0.2", features=["macros"] }
