[package]
name = "btknmle-sock"
version = "0.1.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version="0.2", features=["io-driver"] }
tokio-util = { version="0.2", features=["codec"] }
futures = "0.3"
mio = "0.6"
bytes = "0.5"
libc = "0.2"

[dev-dependencies]
tokio = { version="0.2", features=["macros", "rt-core", "stream", "time"] }
errno = "0.2"
