[package]
name = "btknmle"
version = "0.2.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version="0.3", features=["sync", "rt", "stream", "macros", "signal"] }
bytes = "0.6"
bitflags = "1.2"
thiserror = "1.0"
btknmle-input = { path="../btknmle-input" }
btknmle-keydb = { path="../btknmle-keydb" }
clap = "3.0.0-beta.2"
log = "0.4"
stderrlog = "0.5"
anyhow = "1.0"
gatt = "0.1"
btmgmt = "0.1"
