[package]
name = "btknmle-input"
version = "0.2.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
input = { version = "0.7", default-features = false, features = ["udev", "libinput_1_15"] }
tokio = { version = "1.11", features = ["net"] }
futures-core = { version = "0.3", default-features = false }
libc = "0.2"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.11", features = ["macros", "rt", "time"] }
anyhow = "1.0"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["time"] }

[build-dependencies]
bindgen = { version = "0.59", optional = true }
