[package]
name = "btknmle-keydb"
version = "0.2.0"
authors = ["yskszk63 <yskszk63@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.13", features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rand = "0.8"
thiserror = "1.0"
btmgmt = "0.2"

[dev-dependencies]
tokio = { version = "1.13", features = ["macros", "rt"] }
mktemp-rs = "0.2"
